src/test/ui/typeck/typeck-negative-impls-builtin.stderr
error[E0192]: negative impls are only allowed for auto traits (e.g., `Send` and `Sync`)
  --> $DIR/typeck-negative-impls-builtin.rs:9:1
   |
LL | impl !TestTrait for TestType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0192`.
